--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-# Old Code / Notes / Random Test Stuff
-old/
+# old / outdated content
+/outdated
 
+# wip css/js content (unimplemented)
 css/tmp/
 js/tmp/
+
+assets/images/test-images/
+
+# other (Config and Tessting Files)
+test-content.html
+test-styles.css
+test-script.js
 .prettierrc
+.vscode
